update github calendar

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,12 @@
 [build]
   command = "npm run build"
   publish = "build"
+  functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
   status = 200
