--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.8",
     "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.24",
     "node-fetch": "^3.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
