--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -11,7 +13,7 @@
     "bootstrap": "^5.3.8",
     "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "node-fetch": "^3.3.2",
     "react": "^19.2.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "split-type": "^0.3.4",
+    "three": "^0.181.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
